--- a/SmartTrip/src/app/sign-up/sign-up.page.html
+++ b/SmartTrip/src/app/sign-up/sign-up.page.html
@@ -33,16 +33,18 @@
       <ion-toggle [(ngModel)]="toggleValue" name="toggle"></ion-toggle>
       <label style="margin-left: 20px; margin-top:-5px; font-family: 'Aller Bold', sans-serif; color: #363636">i agree to the Terms of Service <br> and Privacy Policy</label>
     </div>
-    <div class="error-message" *ngIf="toggleError" style="color: red;font-weight: bold;text-align: center;margin-top: 17px;margin-bottom: -53px;">Please accept the Terms of Service and Privacy Policy!</div>
+    <div class="error-message" *ngIf="toggleError" style="color: red;font-weight: bold;text-align: center;margin-top: 17px;margin-bottom: -22px;">Please accept the Terms of Service and Privacy Policy!</div>
     <div class="error-message" *ngIf="errorMessage" style="color: red;font-weight: bold;text-align: center;margin-top: 23px;margin-bottom: -32px;">{{ errorMessage }}</div>
-    <div>
-      <ion-button class="first_button" style="margin-left: 38px; margin-top: 55px;" (click)="goToOpenPage()" shape="round">back</ion-button>
-      <ion-button class="second_button" style="margin-left:224px; margin-top:-76px" shape="round" (click)="signUp()">finalize</ion-button>
+    <div class="button-wrapper">
+      <ion-button class="first_button" style="margin-left: -10px; margin-top: 55px;" (click)="goToOpenPage()" shape="round">back</ion-button>
+      <ion-button class="second_button" style="margin-left:170px; margin-top:-76px" shape="round" (click)="signUp()">finalize</ion-button>
+      <div>
+        <ion-header style="margin-top:10px; color:grey; text-align: center; font-family: 'Aller Bold', sans-serif "> already have an account? </ion-header>
+        <ion-header style="margin-top:10px; color:#443DB8; text-align: center; font-family: 'Aller Bold', sans-serif " (click)="goToSignInPage()"> log in </ion-header>
+      </div>
+
     </div>
   </form>
-  <div>
-    <ion-header style="margin-top:10px; color:grey; text-align: center; font-family: 'Aller Bold', sans-serif "> already have an account? </ion-header>
-    <ion-header style="margin-top:10px; color:#443DB8; text-align: center; font-family: 'Aller Bold', sans-serif " (click)="goToSignInPage()"> log in </ion-header>
-  </div>
+
 
 </ion-content>
