--- a/SmartTrip/src/app/tab1/tab1.page.html
+++ b/SmartTrip/src/app/tab1/tab1.page.html
@@ -29,14 +29,14 @@
 
   <div class="error-message" *ngIf="errorMessage" style="color: red;font-weight: bold;text-align: center;margin-top: 33px;margin-bottom: -35px;">{{ errorMessage }}</div>
 
+  <div class="button-wrapper">
     <div class="button text-end ">
       <h1 style="color: white; "></h1>
       <ion-button class="first_button" style="margin-left: 38px; margin-top: 48px;" (click)="goToOpenPage()" shape="round">back</ion-button>
     </div>
-
     <div class="button  ion-text-right">
       <h1 style="color: white; "></h1>
       <ion-button class="second_button" style="margin-left:224px; margin-top:-16px" (click)="signIn()"shape="round">log in</ion-button>
     </div>
-
+  </div>
 </ion-content>
