Saving Location in database & Routing Location name

--- a/SmartTrip/src/app/facility-review/facility-review.page.html
+++ b/SmartTrip/src/app/facility-review/facility-review.page.html
@@ -16,8 +16,8 @@
       <img src="assets/images/opet.png" >
     </div>
 
-    <ion-header *ngIf="facilityTitle" style="margin-top:38px;margin-left: 138px; color:white;font-size: 20px;"> {{ facilityTitle }} </ion-header>
-    <ion-header style="margin-top:8px;margin-left: 137px; color:white;font-size: 15px;">Yayalar, 06740 Çamlıdere/Ankara </ion-header>
+    <ion-header *ngIf="facilityTitle" style="margin-top:38px;margin-left: 160px; color:white;font-size: 25px;"> {{ facilityTitle }} </ion-header>
+    <!--<ion-header style="margin-top:8px;margin-left: 137px; color:white;font-size: 15px;">Yayalar, 06740 Çamlıdere/Ankara </ion-header> -->
     <div>
       <form [formGroup]="form">
         <div class="cont">
