--- a/SmartTrip/src/app/facility-review/facility-review.page.html
+++ b/SmartTrip/src/app/facility-review/facility-review.page.html
@@ -16,7 +16,7 @@
       <img src="assets/images/opet.png" >
     </div>
 
-    <ion-header *ngIf="facilityTitle" style="margin-top:38px;margin-left: 160px; color:white;font-size: 25px;"> {{ facilityTitle }} </ion-header>
+    <ion-header *ngIf="facilityName" style="margin-top:38px;margin-left: 160px; color:white;font-size: 25px;"> {{ facilityName }} </ion-header>
     <!--<ion-header style="margin-top:8px;margin-left: 137px; color:white;font-size: 15px;">Yayalar, 06740 Çamlıdere/Ankara </ion-header> -->
     <div>
       <form [formGroup]="form">
