--- a/SmartTrip/src/app/profile-setup/profile-setup.page.html
+++ b/SmartTrip/src/app/profile-setup/profile-setup.page.html
@@ -8,7 +8,7 @@
   </div>
   <div>
     <ion-avatar class="profilepicture">
-      <img src="assets/images/defaultprofilepicture.png">
+      <img [src]="profilePicture">
       <ion-header *ngIf="dataComing" style="margin-top:10px;margin-left: 3px; color:white; text-align: center; font-family: 'Aller Bold', sans-serif ;font-size: 25px;"> {{dataComing}} </ion-header>
     </ion-avatar>
   </div>
