--- a/SmartTrip/src/app/facility-review/facility-review.page.scss
+++ b/SmartTrip/src/app/facility-review/facility-review.page.scss
@@ -18,6 +18,11 @@ ion-button{
   --border-width: 0;
   border: 1px solid white;
   margin-left: 26px;
+  margin-top: 100%;
+  background: white;
+  img{
+    object-fit: contain;
+  }
 }
 .cont {
   width: 93%;
@@ -26,13 +31,14 @@ ion-button{
   margin: 4% auto;
   padding: 30px 0;
   filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
-
+  position: fixed;
 }
 
 div.stars {
   width: 270px;
-  margin-left: 60px;
-  margin-top: -30px;
+  margin-left: 75px;
+  margin-top: -35px;
+  position: fixed;
 }
 
 ::ng-deep label.star{
