--- a/SmartTrip/src/app/tab2/tab2.page.html
+++ b/SmartTrip/src/app/tab2/tab2.page.html
@@ -35,7 +35,7 @@
           </ion-col>
           <ion-col>
             <ion-fab-button style="margin-left: 15px" color="secondary">
-              <ion-icon style="margin-top: 3px; margin-right: 2px" name="navigate-outline"></ion-icon>
+              <ion-icon style="margin-top: 3px; margin-right: 2px" name="navigate-outline" (click)="openNavigation();"></ion-icon>
             </ion-fab-button>
           </ion-col>
           <ion-col>
