--- a/SmartTrip/src/app/tab1/tab1.page.html
+++ b/SmartTrip/src/app/tab1/tab1.page.html
@@ -9,34 +9,41 @@
       </div>
   </div>
 
-      <div>
-        <ion-input class="input_box" style="margin-top: 283px;"  name="email" type="email" placeholder=" email" [(ngModel)] = "user.email" required>
-          <ion-icon src="assets/icon/envelope-regular.svg" name="envelope-regular" style="width: 36px; height: 22px;"></ion-icon>
-        </ion-input>
+    <div>
+      <ion-input class="input_box" style="margin-top: 283px;"  name="email" type="email" placeholder=" email" [(ngModel)]="user.email" required>
+        <ion-icon src="assets/icon/envelope-regular.svg" name="envelope-regular" style="width: 36px; height: 22px;"></ion-icon>
+      </ion-input>
+      <div *ngIf="!user.email" class="error-message">
+        Email cannot be empty.
       </div>
-      <div>
-        <ion-input class="input_box" style="margin-top: 33px;" name="password" type="password" placeholder=" password" [(ngModel)] = "user.password" required>
-          <ion-icon src="assets/icon/lock-solid.svg" name="lock-solid" style="width: 36px; height: 22px;"></ion-icon>
-        </ion-input>
-        <ion-header style="margin-top:25px; color:white; text-align: center; font-family: 'Aller Bold', sans-serif " (click)="goToPasswordPage()"shape="round">forgot your password? </ion-header>
+    </div>
+    <div>
+      <ion-input class="input_box" style="margin-top: 40px;" name="password" type="password" placeholder=" password" [(ngModel)]="user.password" required>
+        <ion-icon src="assets/icon/lock-solid.svg" name="lock-solid" style="width: 36px; height: 22px;"></ion-icon>
+      </ion-input>
+      <div *ngIf="!user.password" class="error-message">
+        Password cannot be empty.
       </div>
+      <ion-header style="margin-top:60px; color:white; text-align: center; font-family: 'Aller Bold', sans-serif " (click)="goToPasswordPage()" shape="round">forgot your password? </ion-header>
+    </div>
+
   </form>
 
-  <div style="display: flex; margin-left:136px; margin-top:252px" >
+<!--  <div style="display: flex; margin-left:136px; margin-top:252px" >
     <ion-toggle></ion-toggle>
     <label style="margin-left: 10px; margin-top:1px; font-family: 'Aller Bold', sans-serif; color: #363636">remember me</label>
   </div>
 
   <div class="error-message" *ngIf="errorMessage" style="color: red;font-weight: bold;text-align: center;margin-top: 33px;margin-bottom: -35px;">{{ errorMessage }}</div>
-
+-->
   <div class="button-wrapper">
     <div class="button text-end ">
       <h1 style="color: white; "></h1>
-      <ion-button class="first_button" style="margin-left: 38px; margin-top: 48px;" (click)="goToOpenPage()" shape="round">back</ion-button>
+      <ion-button class="first_button" style="margin-left: 38px; margin-top: 10px ;" (click)="goToOpenPage()" shape="round">back</ion-button>
     </div>
     <div class="button  ion-text-right">
       <h1 style="color: white; "></h1>
-      <ion-button class="second_button" style="margin-left:224px; margin-top:-16px" (click)="signIn()"shape="round">log in</ion-button>
+      <ion-button class="second_button" style="margin-left:224px; margin-top:-90px" (click)="signIn()"shape="round">log in</ion-button>
     </div>
   </div>
 </ion-content>
