--- a/SmartTrip/src/app/tab2/tab2.page.html
+++ b/SmartTrip/src/app/tab2/tab2.page.html
@@ -57,7 +57,7 @@
           <img src="{{mosque}}" (click)="selectMosque();" style="margin-left: 75% ;margin-top: 2%">
         </div>
         <div>
-          <ion-button class="third_button" style="position: absolute; top: 73px; left: 90px; height: 35px ; width: 197px;" shape="round" (click)="searchNearbyGasStations()">find near facilities by me </ion-button>
+          <ion-button class="third_button" style="position: absolute; top: 73px; left: 90px; height: 35px ; width: 197px;" shape="round" (click)="searchNearbyGasStations()">find facilities near me </ion-button>
           <ion-button class="first_button" style="margin-left: 30px; margin-top: 126px; "shape="round" (click)="openEnd()">back</ion-button>
           <ion-button class="second_button" style="margin-left: 10px; margin-top: 126px;" shape="round">filter</ion-button>
         </div>
