--- a/SmartTrip/src/app/tab2/tab2.page.html
+++ b/SmartTrip/src/app/tab2/tab2.page.html
@@ -14,9 +14,6 @@
       </ion-item>
     </ion-list>
   </ion-toolbar>
-  <!--  <ion-toolbar class="searchBar" slot="fixed" color="translucent" >
-      <ion-searchbar search-icon="search-circle"  color="light" placeholder="Search Facility"></ion-searchbar>
-    </ion-toolbar>-->
   <div id='map'></div>
   <div>
     <ion-toolbar class="bottomMenu" slot="fixed" color="translucent">
@@ -67,7 +64,7 @@
 
     <!-- İkinci menü -->
     <ion-menu contentId="main-content" side="end" menuId="filterMenu" class="sideMenu">
-      <ion-content class="secondMenu" scroll-y="false" >
+      <ion-content class="secondMenu" scroll-y="true" >
         <ion-list class="filteredItems">
 <!--          <ion-list-header>
             Facility Names
