--- a/SmartTrip/src/app/facility-review/facility-review.page.scss
+++ b/SmartTrip/src/app/facility-review/facility-review.page.scss
@@ -50,4 +50,13 @@ div.stars {
   }
 }
 
+bar-rating ::ng-deep {
+  .br-units{
+    justify-content: center;
+
+    .br-unit {
+      font-size: 48px;
+    }
+  }
+}
 
