--- a/SmartTrip/src/app/write-review/write-review.page.scss
+++ b/SmartTrip/src/app/write-review/write-review.page.scss
@@ -42,14 +42,23 @@
   max-width: 350px;
   text-align: center;
   margin: 4% auto;
-  padding: 30px 0;
+  padding: 5px 0;
   filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
 
 }
 
 div.stars {
-  margin-right: 12%;
   margin-top: -20px;
+}
+
+bar-rating ::ng-deep {
+  .br-units{
+    justify-content: center;
+
+    .br-unit {
+      font-size: 48px;
+    }
+  }
 }
 
 
